Correct the native-image bug's verification and its remaining scope
The report said the gate could not run against a real binary until the
monolith's image stage is migrated. That blocks shipping, not verifying: an
image whose entrypoint is the binary takes three lines and no monolith, and
DaemonApiGateIT passes against one. The commands are in the file now.

Also records what the gate cannot check — resize swallows Throwable by
contract, so a missing registration for the variadic ioctl is invisible to it —
and the `stty size` probe that does check it.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>